--- a/14-bib.html
+++ b/14-bib.html
@@ -247,7 +247,7 @@ Review</span></em>, <em>95</em>(3), 529–546. <a href="https://doi.org/10.1017/
 <div id="ref-arel:2022" class="csl-entry" role="listitem">
 Arel-Bundock, V. (2022). <span class="nocase">modelsummary: Data and
 Model Summaries in R</span>. <em>Journal of Statistical Software</em>,
-<em>103</em>(1), 1–23.
+<em>103</em>(1), 1–23. <a href="https://doi.org/10.18637/jss.v103.i01">https://doi.org/10.18637/jss.v103.i01</a>
 </div>
 <div id="ref-boix:2003" class="csl-entry" role="listitem">
 Boix, C., &amp; Stokes, S. (2003). <span>Endogenous
