--- a/12-Downloads.html
+++ b/12-Downloads.html
@@ -230,6 +230,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="files/Downloads/PO33Q_Bibliography.pdf">PO33Q Bibliography</a></li>
 <li><a href="files/Week 1/PO33Q_Codebook.pdf">Codebook for all Data Sets</a></li>
 <li><a href="files/Downloads/Statistical Tables.pdf">Statistical Tables</a></li>
+<li><a href="files/Week 7/Results Table/PO33Q_Week7_Results-Table.pdf">Week 7 Results Table</a></li>
 </ul>
 </section>
 <section id="data-sets-in-alphabetical-order" class="level2 unnumbered">
