--- a/11-Quarto.html
+++ b/11-Quarto.html
@@ -298,11 +298,11 @@ div.csl-indent {
 <p>It is possible that R will ask you to install the <code>quarto</code> package. Please do so, and also allow the installation of any dependencies if prompted.</p>
 <section id="yaml" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="yaml">YAML</h3>
-<p>YAML is an acronym for “Yet Another Markup Language”. This section of the document usually contains the settings for the entire document, such as the title, information about the bibliography (see below), and additional packages we might need to load. The YAML is gated by three horizontal dashes at the top and at the bottom. In the template, there is some more formatting going on outside of the YAML and finishes at line 119.</p>
+<p>YAML is an acronym for “Yet Another Markup Language”. This section of the document usually contains the settings for the entire document, such as the title, information about the bibliography (see below), and additional packages we might need to load. The YAML is gated by three horizontal dashes at the top and at the bottom. In the template, there is some more formatting going on outside of the YAML and finishes at line 127.</p>
 </section>
 <section id="text" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="text">Text</h3>
-<p>Then, in line 122, follows the text which you can basically type as you always would. In order to use the familiar text formatting icons that turn text into headings, or into bold, change the font size, etc. you can switch the Quarto editor to “Visual” at the top. In the template, this is set to “Source” where Quarto would expect code to achieve all of these formatting operations.</p>
+<p>Then, in line 130, follows the text which you can basically type as you always would. In order to use the familiar text formatting icons that turn text into headings, or into bold, change the font size, etc. you can switch the Quarto editor to “Visual” at the top. In the template, this is set to “Source” where Quarto would expect code to achieve all of these formatting operations.</p>
 <div style="height:1em;">
 
 </div>
@@ -492,7 +492,7 @@ preferably APA styled, but I’m not too precious as long as it’s consistent
 <ul>
 <li>Light grey background to improve readability (a little present to myself for marking)</li>
 <li>Font size 12, one-half spacing</li>
-<li>Font: CMU sans serif for legibility</li>
+<li>Font: Latin Modern Sans serif for legibility</li>
 <li>Title page with module name, your registration number, submission date, and word count. No page number.</li>
 <li>Page numbering in Roman numerals for table of contents, list of figures, and list of tables</li>
 <li>Table of contents, list of figures, and list of tables are automatic</li>
