--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -124,9 +124,21 @@ div.csl-indent {
 <meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<script>
+// This MUST come before the script src above
+window.MathJax = {
+  tex: {
+    // (Quarto already sets these, but harmless to repeat)
+    inlineMath: [['\\(', '\\)'], ['$', '$']],
+    displayMath: [['\\[', '\\]'], ['$$', '$$']]
+  },
+  // Tell the CHTML output to use Fira
+  chtml: { font: 'mathjax-fira' }
+};
+</script>
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-chtml-nofont.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 const typesetMath = (el) => {
@@ -678,8 +690,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_c3pphjqnbz86bx2tdzi2(i, j, css_id) {
-          var table = document.getElementById("tinytable_c3pphjqnbz86bx2tdzi2");
+      function styleCell_7y7etgj9bhyg9nj4g4hh(i, j, css_id) {
+          var table = document.getElementById("tinytable_7y7etgj9bhyg9nj4g4hh");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -688,8 +700,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_c3pphjqnbz86bx2tdzi2(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_c3pphjqnbz86bx2tdzi2");
+      function spanCell_7y7etgj9bhyg9nj4g4hh(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_7y7etgj9bhyg9nj4g4hh");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -720,20 +732,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_u7zid9elvvy8vjnccxv4',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_ycy0lcjp7jg65pvjw0jq',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_4d3q7uq5cqp8gbwp2pfl',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_k5vsao6t2mnvh44yq92s',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_62spkt8scxtzt6otjqbi',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_0s3sdyks6ojzgy8ox554',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_0id5oj6iw1v0ge17rc1l',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_2a0u9eifpklgn49x7953',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_5kwhk5s2op2hiqonr4uh',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_qh3zkmiwubxxom7cf85o',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_v8qz6esa7p53wnqi3lik',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_9vx4mgujtk97qbbuisen',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_1w5zzftakeqg25t6zjen',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_yau0ctfiu63qljxzmh76',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_v5mli970qr73u1218wkd',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_8z4momhvqztnccynxpw5',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_c3pphjqnbz86bx2tdzi2(cell.i, cell.j, group.css_id);
+                  styleCell_7y7etgj9bhyg9nj4g4hh(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -741,17 +753,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_u7zid9elvvy8vjnccxv4, .table th.tinytable_css_u7zid9elvvy8vjnccxv4 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ycy0lcjp7jg65pvjw0jq, .table th.tinytable_css_ycy0lcjp7jg65pvjw0jq { text-align: center; }
-      .table td.tinytable_css_4d3q7uq5cqp8gbwp2pfl, .table th.tinytable_css_4d3q7uq5cqp8gbwp2pfl { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_k5vsao6t2mnvh44yq92s, .table th.tinytable_css_k5vsao6t2mnvh44yq92s { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_62spkt8scxtzt6otjqbi, .table th.tinytable_css_62spkt8scxtzt6otjqbi { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0s3sdyks6ojzgy8ox554, .table th.tinytable_css_0s3sdyks6ojzgy8ox554 { text-align: left; }
-      .table td.tinytable_css_0id5oj6iw1v0ge17rc1l, .table th.tinytable_css_0id5oj6iw1v0ge17rc1l { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_2a0u9eifpklgn49x7953, .table th.tinytable_css_2a0u9eifpklgn49x7953 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_5kwhk5s2op2hiqonr4uh, .table th.tinytable_css_5kwhk5s2op2hiqonr4uh { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_qh3zkmiwubxxom7cf85o, .table th.tinytable_css_qh3zkmiwubxxom7cf85o { text-align: center; }
+      .table td.tinytable_css_v8qz6esa7p53wnqi3lik, .table th.tinytable_css_v8qz6esa7p53wnqi3lik { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9vx4mgujtk97qbbuisen, .table th.tinytable_css_9vx4mgujtk97qbbuisen { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_1w5zzftakeqg25t6zjen, .table th.tinytable_css_1w5zzftakeqg25t6zjen { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_yau0ctfiu63qljxzmh76, .table th.tinytable_css_yau0ctfiu63qljxzmh76 { text-align: left; }
+      .table td.tinytable_css_v5mli970qr73u1218wkd, .table th.tinytable_css_v5mli970qr73u1218wkd { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_8z4momhvqztnccynxpw5, .table th.tinytable_css_8z4momhvqztnccynxpw5 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_c3pphjqnbz86bx2tdzi2" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_7y7etgj9bhyg9nj4g4hh" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -855,8 +867,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_218cs6ix6696q6iqttan(i, j, css_id) {
-          var table = document.getElementById("tinytable_218cs6ix6696q6iqttan");
+      function styleCell_e322jsy34x6buofpeoot(i, j, css_id) {
+          var table = document.getElementById("tinytable_e322jsy34x6buofpeoot");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -865,8 +877,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_218cs6ix6696q6iqttan(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_218cs6ix6696q6iqttan");
+      function spanCell_e322jsy34x6buofpeoot(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_e322jsy34x6buofpeoot");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -897,20 +909,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_njpectf426p9mfwwlh42',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_ie24qapamvtvlm2h8ybn',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_57esf3xxx0xyxf94nc34',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_qoigeq7z8x77fnvtxw1q',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_wrrc5t4w40nlta920bmx',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_0znrl9qnbkd7p1efq7lm',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_mjka2x1gbrfj4w273o5z',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_r2yzoamfeh077l5b9h78',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_hvgivrq07oqfqh6lwcy4',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_9y22n5vsfycbz8xfodm7',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_36xperp1uvg9bokiwz8r',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_zv87e72u7d9el1asaahn',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_l7iezyopj2pugbicwxsb',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_brphtezbi6viez9umwxx',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_h0bkhq9qc7qytnnmipes',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_6l3e68odf7kbdcwgvfez',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_218cs6ix6696q6iqttan(cell.i, cell.j, group.css_id);
+                  styleCell_e322jsy34x6buofpeoot(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -918,17 +930,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_njpectf426p9mfwwlh42, .table th.tinytable_css_njpectf426p9mfwwlh42 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ie24qapamvtvlm2h8ybn, .table th.tinytable_css_ie24qapamvtvlm2h8ybn { text-align: center; }
-      .table td.tinytable_css_57esf3xxx0xyxf94nc34, .table th.tinytable_css_57esf3xxx0xyxf94nc34 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qoigeq7z8x77fnvtxw1q, .table th.tinytable_css_qoigeq7z8x77fnvtxw1q { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wrrc5t4w40nlta920bmx, .table th.tinytable_css_wrrc5t4w40nlta920bmx { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0znrl9qnbkd7p1efq7lm, .table th.tinytable_css_0znrl9qnbkd7p1efq7lm { text-align: left; }
-      .table td.tinytable_css_mjka2x1gbrfj4w273o5z, .table th.tinytable_css_mjka2x1gbrfj4w273o5z { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_r2yzoamfeh077l5b9h78, .table th.tinytable_css_r2yzoamfeh077l5b9h78 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hvgivrq07oqfqh6lwcy4, .table th.tinytable_css_hvgivrq07oqfqh6lwcy4 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_9y22n5vsfycbz8xfodm7, .table th.tinytable_css_9y22n5vsfycbz8xfodm7 { text-align: center; }
+      .table td.tinytable_css_36xperp1uvg9bokiwz8r, .table th.tinytable_css_36xperp1uvg9bokiwz8r { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_zv87e72u7d9el1asaahn, .table th.tinytable_css_zv87e72u7d9el1asaahn { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_l7iezyopj2pugbicwxsb, .table th.tinytable_css_l7iezyopj2pugbicwxsb { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_brphtezbi6viez9umwxx, .table th.tinytable_css_brphtezbi6viez9umwxx { text-align: left; }
+      .table td.tinytable_css_h0bkhq9qc7qytnnmipes, .table th.tinytable_css_h0bkhq9qc7qytnnmipes { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_6l3e68odf7kbdcwgvfez, .table th.tinytable_css_6l3e68odf7kbdcwgvfez { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_218cs6ix6696q6iqttan" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_e322jsy34x6buofpeoot" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
