--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -126,9 +126,21 @@ div.csl-indent {
 <meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<script>
+// This MUST come before the script src above
+window.MathJax = {
+  tex: {
+    // (Quarto already sets these, but harmless to repeat)
+    inlineMath: [['\\(', '\\)'], ['$', '$']],
+    displayMath: [['\\[', '\\]'], ['$$', '$$']]
+  },
+  // Tell the CHTML output to use Fira
+  chtml: { font: 'mathjax-fira' }
+};
+</script>
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-chtml-nofont.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 const typesetMath = (el) => {
@@ -1652,8 +1664,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_fj3akn7bqa3168aqy9x6(i, j, css_id) {
-          var table = document.getElementById("tinytable_fj3akn7bqa3168aqy9x6");
+      function styleCell_tv80surp2jhgv50r0pyl(i, j, css_id) {
+          var table = document.getElementById("tinytable_tv80surp2jhgv50r0pyl");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1662,8 +1674,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_fj3akn7bqa3168aqy9x6(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_fj3akn7bqa3168aqy9x6");
+      function spanCell_tv80surp2jhgv50r0pyl(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_tv80surp2jhgv50r0pyl");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1694,26 +1706,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_d5dwnstokv5r184n7hcq',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_lv394a4685sc08z88a6r',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_8mw3xhlx1lgpsp22h48n',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_90bqetus1li8je9ldw8p',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_oxj624sqm7m6bgout370',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_zb71r6qrzlujnqhhnkvv',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_rr9yrif7szc3vnu6pqis',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_ypor7hf9525dvm5tdh8d',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_xcpq1pqt3cxjdezk27v3',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_qx0w3n0jacs2565chl81',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_e2tkkzkgw5a1guw5ffut',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_zkmnqdo6oyuxqwu17a76',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_bhletojhd0jz0qgokcvw',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_p424skkufhta2ln9cu70',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_530dhimcqzegj8d0heki',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_lxseh41glzp6fecsyutm',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_udy7vr24b3s6vr53fshs',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_6xuntlt4ia8gnwrhvdi9',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_086qnykmecdkdqgsskq4',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_gsdohzg9iwmoti55qggx',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_q0f48ypb4di98gp84d1g',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_lspplr6no9rixgvh2jzl',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_7eblw8wuhnzdkfvaez85',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_oiy3ptzbmcoos942u4y3',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_2g4ufltdqrxzobwbx4eg',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_2f721d07yhm8017eybgl',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ssu723q2roc7jyyrooqb',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_wl4fmvxl3y2ss8486ifv',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_fj3akn7bqa3168aqy9x6(cell.i, cell.j, group.css_id);
+                  styleCell_tv80surp2jhgv50r0pyl(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1721,23 +1733,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_d5dwnstokv5r184n7hcq, .table th.tinytable_css_d5dwnstokv5r184n7hcq { text-align: center; text-align: center; }
-      .table td.tinytable_css_lv394a4685sc08z88a6r, .table th.tinytable_css_lv394a4685sc08z88a6r { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_8mw3xhlx1lgpsp22h48n, .table th.tinytable_css_8mw3xhlx1lgpsp22h48n { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_90bqetus1li8je9ldw8p, .table th.tinytable_css_90bqetus1li8je9ldw8p { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_oxj624sqm7m6bgout370, .table th.tinytable_css_oxj624sqm7m6bgout370 { text-align: center; }
-      .table td.tinytable_css_zb71r6qrzlujnqhhnkvv, .table th.tinytable_css_zb71r6qrzlujnqhhnkvv { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_rr9yrif7szc3vnu6pqis, .table th.tinytable_css_rr9yrif7szc3vnu6pqis { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ypor7hf9525dvm5tdh8d, .table th.tinytable_css_ypor7hf9525dvm5tdh8d { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_xcpq1pqt3cxjdezk27v3, .table th.tinytable_css_xcpq1pqt3cxjdezk27v3 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_qx0w3n0jacs2565chl81, .table th.tinytable_css_qx0w3n0jacs2565chl81 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_e2tkkzkgw5a1guw5ffut, .table th.tinytable_css_e2tkkzkgw5a1guw5ffut { text-align: left; }
-      .table td.tinytable_css_zkmnqdo6oyuxqwu17a76, .table th.tinytable_css_zkmnqdo6oyuxqwu17a76 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_bhletojhd0jz0qgokcvw, .table th.tinytable_css_bhletojhd0jz0qgokcvw { text-align: left; text-align: center; }
-      .table td.tinytable_css_p424skkufhta2ln9cu70, .table th.tinytable_css_p424skkufhta2ln9cu70 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_530dhimcqzegj8d0heki, .table th.tinytable_css_530dhimcqzegj8d0heki { text-align: center; text-align: center; }
+      .table td.tinytable_css_lxseh41glzp6fecsyutm, .table th.tinytable_css_lxseh41glzp6fecsyutm { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_udy7vr24b3s6vr53fshs, .table th.tinytable_css_udy7vr24b3s6vr53fshs { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6xuntlt4ia8gnwrhvdi9, .table th.tinytable_css_6xuntlt4ia8gnwrhvdi9 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_086qnykmecdkdqgsskq4, .table th.tinytable_css_086qnykmecdkdqgsskq4 { text-align: center; }
+      .table td.tinytable_css_gsdohzg9iwmoti55qggx, .table th.tinytable_css_gsdohzg9iwmoti55qggx { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_q0f48ypb4di98gp84d1g, .table th.tinytable_css_q0f48ypb4di98gp84d1g { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lspplr6no9rixgvh2jzl, .table th.tinytable_css_lspplr6no9rixgvh2jzl { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_7eblw8wuhnzdkfvaez85, .table th.tinytable_css_7eblw8wuhnzdkfvaez85 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_oiy3ptzbmcoos942u4y3, .table th.tinytable_css_oiy3ptzbmcoos942u4y3 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_2g4ufltdqrxzobwbx4eg, .table th.tinytable_css_2g4ufltdqrxzobwbx4eg { text-align: left; }
+      .table td.tinytable_css_2f721d07yhm8017eybgl, .table th.tinytable_css_2f721d07yhm8017eybgl { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ssu723q2roc7jyyrooqb, .table th.tinytable_css_ssu723q2roc7jyyrooqb { text-align: left; text-align: center; }
+      .table td.tinytable_css_wl4fmvxl3y2ss8486ifv, .table th.tinytable_css_wl4fmvxl3y2ss8486ifv { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_fj3akn7bqa3168aqy9x6" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_tv80surp2jhgv50r0pyl" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -1919,7 +1931,7 @@ Full code you can adapt for the assessment
 <p>So, what’s the setup? Again, we are incorporating the lagged value <span class="math inline">\(y_{t-1}\)</span>, to encapsulate all the history prior to period <span class="math inline">\(t\)</span>. There is just one little trick I need to introduce before we can start on the model: I will replace <span class="math inline">\(y_{t-1}\)</span> by an indicator variable <span class="math inline">\(I_{D}\)</span> in Equation <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> which assumes the value 1 if a country was a democracy in the previous year, and zero otherwise (notation adapted from Epstein et al., 2006, p.&nbsp;553). Following on from this, we can write the model as follows<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>:</p>
 <p><span id="eq-interactionmodel"><span class="math display">\[
 P(D_{i,t}) = \Phi(\beta_{0}+\beta_{1} X_{i,t} + \beta_{2} I_{D} + \beta_{3} I_{D} X_{i,t} + \epsilon_{i,t})
-\tag{1}\]</span></span></p>
+\qquad(1)\]</span></span></p>
 <p>where <span class="math inline">\(P(D_{it})\)</span> is the probability that a country <span class="math inline">\(i\)</span> was a democracy in year <span class="math inline">\(t\)</span>, <span class="math inline">\(\Phi\)</span> is the cumulative normal distribution (the s-shaped distribution which you know from the introduction of probit in week 3), <span class="math inline">\(I_{D}\)</span> the aforementioned indicator variable, <span class="math inline">\(X_{i,t}\)</span> is an independent variable for country <span class="math inline">\(i\)</span> in year <span class="math inline">\(t\)</span>, and <span class="math inline">\(\epsilon_{i,t}\)</span> is a zero mean stochastic disturbance (I only include this for completeness’ sake here. As this is irrelevant for us here and now, I will drop this from the following discussion, not to confuse you unnecessarily). This model is a multiplicative interaction model which allow us to model the probability of a country to be a democracy, <em>conditional</em> on its regime type in the previous year. The indicator variable <span class="math inline">\(I_{D}\)</span>, equal to <span class="math inline">\(y_{t-1}\)</span> captures this information. How does this work?</p>
 <p>Let us start by assuming that in year <span class="math inline">\(t-1\)</span> country <span class="math inline">\(i\)</span> was an autocracy. In this case, the indicator variable <span class="math inline">\(I_{D}\)</span> would be equal to zero, and therefore Equation <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> can be re-written as</p>
 <p><span class="math display">\[\begin{equation}
@@ -1935,7 +1947,6 @@ P(D_{i,t})=\Phi(\beta_{0}+\beta_{1} X_{i,t} +\beta_{2} I_{D} + \beta_{3} I_{D} X
 P(D_{it})=\Phi((\beta_{0} +\beta_{2}) + (\beta_{1} + \beta_{3}) X_{i,t})
 \end{equation}\]</span></p>
 <p>This equation illustrates very well, that the impact of variable <span class="math inline">\(X_{i,t}\)</span> on the probability of democracy to remain a democracy is now made up out of the sum of the two coefficients <span class="math inline">\(\beta_{1}\)</span> and <span class="math inline">\(\beta_{3}\)</span>, whereas the constant is the sum of coefficients <span class="math inline">\(\beta_{0}\)</span> and <span class="math inline">\(\beta_{2}\)</span>.</p>
-<hr>
 </section>
 <section id="example" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="example">Example</h2>
