--- a/11-Quarto.html
+++ b/11-Quarto.html
@@ -504,7 +504,8 @@ preferably APA styled, but I’m not too precious as long as it’s consistent
 <ul>
 <li>Light grey background to improve readability (a little present to myself for marking)</li>
 <li>Font size 12, one-half spacing</li>
-<li>Font: Latin Modern Sans serif for legibility</li>
+<li>Main font: Latin Modern Sans Serif for legibility</li>
+<li>Maths font: Fira Maths, ditto</li>
 <li>Title page with module name, your registration number, submission date, and word count. No page number.</li>
 <li>Page numbering in Roman numerals for table of contents, list of figures, and list of tables</li>
 <li>Table of contents, list of figures, and list of tables are automatic</li>
